--- a/gfarm_v2/branches/2.6.dirquota/man/man1/gfls.1
+++ b/gfarm_v2/branches/2.6.dirquota/man/man1/gfls.1
@@ -1,22 +1,13 @@
 '\" t
 .\"     Title: gfls
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 27 Apr 2007
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: 11 Nov 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFLS" "1" "27 Apr 2007" "Gfarm" "Gfarm"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
+.TH "GFLS" "1" "11 Nov 2016" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -40,17 +31,22 @@ List information of files or contents of directories specified by
 .PP
 \fB\-a\fR
 .RS 4
-Do not hide entries starting with ``\&.\*(Aq\*(Aq\&.
+Do not hide entries starting with ``\&.\'\'\&.
 .RE
 .PP
 \fB\-A\fR
 .RS 4
-Do not list ``\&.\*(Aq\*(Aq and ``\&.\&.\*(Aq\*(Aq\&.
+Do not list ``\&.\'\' and ``\&.\&.\'\'\&.
 .RE
 .PP
 \fB\-C\fR
 .RS 4
 Multi\-column output\&. This is the default output format\&.
+.RE
+.PP
+\fB\-D\fR
+.RS 4
+Display dirset name of the directory quota feature\&.
 .RE
 .PP
 \fB\-d\fR
@@ -60,7 +56,7 @@ List directory entries instead of the contents\&.
 .PP
 \fB\-E\fR \fIseconds\fR
 .RS 4
-Specifies seconds to hold attribute cache\&. If 0 is specified, attributes won\*(Aqt be cached\&.
+Specifies seconds to hold attribute cache\&. If 0 is specified, attributes won\'t be cached\&.
 .RE
 .PP
 \fB\-F\fR
