--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -458,7 +458,7 @@ metadb_server_stack_size \fIbytes\fR
 .RS 4
 This directive specifies the size of each thread in the gfmd metadata server process\&. If not specified, the default size of the OS is used\&. This parameter is used to cut down the size of virtual memory space used by gfmd\&.
 .sp
-For example, the default stack size on CentOS 5/i386 is 10MB, thus, you can decrease the size of the virtual memory space of gfmd to 1/40, by specifying 256KB as this parameter\&.
+For example, the default stack size on CentOS 5/i386 is 10 MiB, thus, you can decrease the size of the virtual memory space of gfmd to 1/40, by specifying 256 KiB as this parameter\&.
 .sp
 This parameter is only available in gfmd\&.conf, and ignored in gfarm2\&.conf\&.
 .sp
@@ -1348,7 +1348,7 @@ For example,
 .PP
 minimum_free_disk_space \fIbytes\fR
 .RS 4
-This directive specifies free disk space (in bytes) which is required on filesystem nodes\&. The Gfarm scheduler excludes filesystem nodes which have less free space than this parameter, when it schedules nodes for jobs which may write files\&. The free space value may have a suffix like ``k\*(Aq\*(Aq (kilo bytes), ``M\*(Aq\*(Aq (mega bytes), ``G\*(Aq\*(Aq (giga bytes) and ``T\*(Aq\*(Aq (tera bytes)\&. The default size is 512M bytes\&.
+This directive specifies free disk space (in bytes) which is required on filesystem nodes\&. The Gfarm scheduler excludes filesystem nodes which have less free space than this parameter, when it schedules nodes for jobs which may write files\&. The free space value may have a suffix like ``k\*(Aq\*(Aq (kibibyte), ``M\*(Aq\*(Aq (mebibyte), ``G\*(Aq\*(Aq (gibibyte) and ``T\*(Aq\*(Aq (tebibyte)\&. The default size is 512 MiB\&.
 .sp
 This directive has to be specified in both gfarm2\&.conf and gfmd\&.conf\&. After restarting the gfmd and the Gfarm client, it is effective\&.
 .sp
@@ -2008,7 +2008,7 @@ Example:
 .PP
 metadb_journal_max_size \fIfile_size\fR
 .RS 4
-This parameter specifies the max size of the journal file in bytes\&. Beware that the larger the size is, the longer it takes time for the gfmd to complete starting\&. The default is 33554432 (32 MBytes)\&.
+This parameter specifies the max size of the journal file in bytes\&. Beware that the larger the size is, the longer it takes time for the gfmd to complete starting\&. The default is 33554432 (32 MiB)\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2348,7 +2348,7 @@ rdma_min_size \fIsize\fR
 .RS 4
 Specify the minimum data size to select the RDMA data transfer\&.
 .sp
-The default size is 1024 bytes\&.
+The default size is 65536 bytes\&.
 .sp
 For example,
 .sp
@@ -2375,7 +2375,7 @@ mode repeats registration and deregistration at every transfer\&.
 .sp
 Although the static mode is faster than dynamic mode, memory load becomes higher and may fail in registration because the memories are locked through the connections\&.
 .sp
-The default mode is static and dynamic\&.
+The default mode is static\&.
 .sp
 For example,
 .sp
@@ -2395,7 +2395,7 @@ rdma_mr_reg_static_min_size \fIsize\fR
 .RS 4
 Specify the initial buffer size when the static mode is selected with rdma_mr_reg_mode\&.
 .sp
-The default size is 1 megabytes\&.
+The default size is 1 MiB\&.
 .sp
 For example,
 .sp
@@ -2414,7 +2414,7 @@ rdma_mr_reg_static_max_size \fIsize\fR
 .RS 4
 Specify the maximum expansion buffer size when the static mode is selected with rdma_mr_reg_mode\&.
 .sp
-The default size is 16 megabytes\&.
+The default size is 16 MiB\&.
 .sp
 For example,
 .sp
